feat: 🎸 调整shap依赖图展示

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@
 !*/
 
 # Ignore system files
-.DS_Store
-*.swp
-*.swo
+**/.DS_Store
+**/*.swp
+**/*.swo
 
 # Ignore Python cache files
 **/__pycache__/
